me/qrashi/pong/Pong/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-11-openjdk/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/opt/greenfoot/extensions/greenfoot.jar:/opt/greenfoot/bluejcore.jar:/opt/greenfoot/bluejeditor.jar:/opt/greenfoot/bluejext.jar:/opt/greenfoot/junit-4.11.jar:/opt/greenfoot/hamcrest-core-1.3.jar:/opt/greenfoot/bluej.jar:/opt/greenfoot/classgraph-4.2.6.jar:/opt/greenfoot/diffutils-1.2.1.jar:/opt/greenfoot/commons-logging-api-1.1.2.jar:/opt/greenfoot/jl1.0.1.jar:/opt/greenfoot/opencsv-2.3.jar:/opt/greenfoot/xom-1.2.9.jar:/opt/greenfoot/lang-stride.jar:/opt/greenfoot/nsmenufx-2.1.4.jar:/opt/greenfoot/richtextfx-fat-0.9.0.jar:/opt/greenfoot/guava-17.0.jar:/opt/greenfoot/httpclient-4.1.1.jar:/opt/greenfoot/httpcore-4.1.jar:/opt/greenfoot/httpmime-4.1.1.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.properties.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx-swt.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.web.jar/lib/javafx.web.jar:/home/fritz/Dokumente/INF/20-21/PongDL
-d
/home/fritz/Dokumente/INF/20-21/PongDL/doc
-encoding
UTF-8
-charset
UTF-8
/home/fritz/Dokumente/INF/20-21/PongDL/PongWorld.java
<---- end of javadoc command ---->
Loading source file /home/fritz/Dokumente/INF/20-21/PongDL/PongWorld.java...
/home/fritz/Dokumente/INF/20-21/PongDL/PongWorld.java:10: error: class, interface, or enum expected
private int player_score_int = 0;
        ^
/home/fritz/Dokumente/INF/20-21/PongDL/PongWorld.java:11: error: class, interface, or enum expected
private int computer_score_int = 0;
        ^
2 errors
